# submitr

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.json  Dockerfile-for-pyinstaller  Dockerfile-for-pyinstaller-arm  Dockerfile-for-pyinstaller-arm-redhat-centos  Dockerfile-for-pyinstaller-arm-ubuntu-debian  Dockerfile-for-pyinstaller-arm-ubuntu-debian-obsolete  Dockerfile-for-pyinstaller-linux-x86  Dockerfile-for-pyinstaller-x86  Dockerfile-for-pyinstaller-x86-redhat-centos-obsolete  Dockerfile-for-pyinstaller-x86-ubuntu-debian  INSTALLATION.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  TESTING.rst  demo.sh  install.sh  pyproject.toml  pytest.ini  rc.py
.github/workflows/: main-binaries-release.yml  main-binaries-test.yml  main-deploy-docs.yml  main-deploy-docs.yml.DISABLED  main-exe-builds.yml  main-integration-tests.yml  main-publish.yml  main-publish.yml.DISABLED  main.yml
binaries/: submitr-linux-arm.v0.8.19  submitr-linux-x86.v0.8.8  submitr-macos.v0.8.20
demo/annual_2024/: README  bcm_formatted_hapmapmix.xlsx  bcm_formatted_hapmapmix.xlsx-original  create-dependencies.sh
docs/: Makefile
docs/gendoc_templates/: consortia_page.html  consortia_table.html  file_formats_page.html  file_formats_row.html  identifying_properties_section.html  object_model_page.html  object_model_type.html  oneormore_property_rows.html  properties_table.html  property_row.html  reference_genomes_page.html  reference_genomes_row.html  reference_genomes_table.html  reference_properties_section.html  reference_properties_table.html  required_properties_section.html  required_properties_table.html  simple_property_row.html  submission_centers_page.html  submission_centers_table.html  type_hierarchy_page.html
docs/schema_templates/: consortia_page.html  consortia_row.html  consortia_table.html  file_formats_page.html  file_formats_row.html  file_formats_table.html  full_property_row.rst  identifying_properties_section.html  identifying_properties_table.html  object_model_page.html  oneormore_property_row.html  oneormore_property_row.rst  oneormore_property_rows.html  properties_list.html  properties_table.html  property_row.html  reference_genomes_page.html  reference_genomes_row.html  reference_genomes_table.html  reference_properties_section.html  reference_properties_table.html  required_properties_section.html  required_properties_table.html  schema.html  schema.rst  simple_property.rst  simple_property_row.html  simple_property_row.rst  submission_centers_page.html  submission_centers_row.html  submission_centers_table.html
docs/scripts/: gendoc.py  generate_schema_doc.py
docs/source/: about.rst  account_creation.rst  advanced_usage.rst  basic_setup.rst  binary_installation.rst  conf.py  consortia.rst  credentials.rst  file_formats.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  installation_prerequisites.rst  installing_prerequisites.rst  modules.rst  object_model.rst  rclone.rst  reference_genomes.rst  schema_types.rst  submission_centers.rst  submit_cgap.rst  submit_cgap.scripts.rst  submit_cgap.tests.rst  submitr.rst  submitr.scripts.rst  submitr.tests.rst  uploading_files.rst  usage.rst  windows_installation.rst
downloads/: smaht-submitr-install.sh
downloads/macos/: submitr-0.8.3.1b10  submitr-0.8.3.1b9  submitr.installer.pkg-0.8.3.1b9
scripts/: demo.sh  demo1.sh  demo2.sh  publish  tag-and-push
submit_cgap/: auth.py  base.py  exceptions.py  portal_calls.py  portal_network_access.py  submission.py  trace_utils.py  utils.py
submit_cgap/scripts/: check_ontology.py  check_submission.py  make_sample_fastq_file.py  proto_submit.py  resume_uploads.py  show_upload_info.py  submit_genelist.py  submit_metadata_bundle.py  submit_ontology.py  upload_item_data.py  upload_metadata_bundle_part.py
submit_cgap/tests/: test_auth.py  test_base.py  test_check_submission.py  test_exceptions.py  test_make_sample_fastq_file.py  test_resume_uploads.py  test_show_upload_info.py  test_submission.py  test_submit_genelist.py  test_submit_metadata_bundle.py  test_submit_ontology.py  test_testing_helpers.py  test_upload_item_data.py  test_upload_metadata_bundle_part.py  test_utils.py  test_version.py  testing_helpers.py
submitr/: base.py  custom_excel.py  exceptions.py  file_for_upload.py  metadata_template.py  output.py  portal_network_access.py  progress_bar.py  rclone.py  rclone_installation.py  s3_upload.py  s3_utils.py  submission.py  submission_uploads.py  utils.py  validators.py
submitr/config/: custom_column_mappings.json  custom_column_mappings.py
submitr/rclone/: __init__.py  amazon_credentials.py  google_credentials.py  rclone.py  rclone_amazon.py  rclone_commands.py  rclone_config.py  rclone_config_amazon.py  rclone_config_google.py  rclone_google.py  rclone_installation.py  rclone_store.py  rclone_store_registry.py  rclone_target.py  rclone_test_utils.py  rclone_utils.py  rclone_utils_for_testing.py  rcloner.py  test_rclone_related.py
submitr/scripts/: check_submission.py  cli_utils.py  get_metadata_template.py  list_submissions.py  rcloner.py  resume_uploads.py  show_upload_info.py  submit_metadata_bundle.py  submitr.py  update_portal_object.py  upload_item_data.py  view_portal_object.py
submitr/tests/: conftest_settings.py  datafixtures.py  test_base.py  test_brain_path_report_validator.py  test_check_submission.py  test_custom_excel.py  test_exceptions.py  test_file_for_upload.py  test_misc.py  test_non_brain_path_report_validator.py  test_rclone_support.py  test_rclone_support_new.py  test_resume_uploads.py  test_show_upload_info.py  test_submission.py  test_submit_genelist.py  test_submit_metadata_bundle.py  test_submit_ontology.py  test_testing_helpers.py  test_tissue_sample_validators.py  test_tissue_validators.py  test_upload_item_data.py  testing_cloud_helpers.py  testing_helpers.py  testing_rclone_config.py  testing_rclone_helpers.py
submitr/validators/: __init__.py  analyte_rin_validator.py  brain_path_report_validator.py  decorator.py  decorators.py  dsa_haplotype_validator.py  duplicate_row_validator.py  (+15 more)
(+266 files in other folders)
