[tool.poetry]
name = "submit_cgap"
version = "0.2.0"
description = "Support for uploading file submissions to the Clinical Genomics Analysis Platform (CGAP)."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
keywords = ["submit-cgap"]
homepage = "https://github.com/dbmi-bgm/SubmitCGAP"
repository = "https://github.com/dbmi-bgm/SubmitCGAP.git"
packages = [
  { include="submit_cgap", from="." }
]

classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3.6',
]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]

python = ">=3.6,<3.8"

dcicutils = ">=0.40.0,<1"
boto3 = ">=1.10.50,<2"
requests = ">=2.23.0,<3"

[tool.poetry.dev-dependencies]

# PyCharm says boto3-stubs contains useful type hints
boto3-stubs = ">=1.14.37.0"

# Coverage
codacy-coverage = ">=1.3.11"
coverage = ">=5.2"
coveralls = ">=2.1.1"

# Linting generally
flake8 = ">=3.8.3"

# pygments is used by PyCharm
pygments = ">=2.6.1"

# PyTest and its auxiliary support files
pytest = ">=4.5.0"
pytest-cov = ">=2.7.1"
pytest-mock = ">=1.10.4"
pytest-runner = ">=5.1"

[tool.poetry.scripts]

resume-uploads = "submit_cgap.scripts.resume_uploads:main"
submit-metadata-bundle = "submit_cgap.scripts.submit_metadata_bundle:main"
upload-item-data = "submit_cgap.scripts.upload_item_data:main"
make-sample-fastq-file = "submit_cgap.scripts.make_sample_fastq_file:main"

[tool.coverage.report]

# https://coverage.readthedocs.io/en/latest/config.html
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
