[tool.poetry]
name = "submit_cgap"
version = "0.7.3"
description = "Support for uploading file submissions to the Clinical Genomics Analysis Platform (CGAP)."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
keywords = ["submit-cgap"]
homepage = "https://github.com/dbmi-bgm/SubmitCGAP"
repository = "https://github.com/dbmi-bgm/SubmitCGAP.git"
packages = [
  { include="submit_cgap", from="." }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 4 - Beta',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',

  'Topic :: Database :: Database Engines/Servers',

  # Pick your license as you wish (should match "license" above)
  'License :: OSI Approved :: MIT License',

  'Natural Language :: English',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',

]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]

python = ">=3.6,<3.8"

awscli = ">=1.18.174"
dcicutils = ">=1.8.0,<2"
boto3 = ">=1.16.14,<2"
requests = ">=2.24.0,<3"

[tool.poetry.dev-dependencies]

# PyCharm says boto3-stubs contains useful type hints
boto3-stubs = ">=1.16.14.0"

# Coverage
codacy-coverage = ">=1.3.11"
coverage = ">=5.3"
coveralls = ">=2.1.2"

# Linting generally
flake8 = ">=3.8.4"

# pygments is used by PyCharm
pygments = ">=2.7.2"

# PyTest and its auxiliary support files
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
pytest-mock = ">=3.3.1"
pytest-runner = ">=5.2"

# Docs build dependencies
Sphinx = "^3.3.0"
sphinx-rtd-theme = "0.5.0"  # Do we have a good reason to pin this? -kmp 9-Nov-2020

[tool.poetry.scripts]

make-sample-fastq-file = "submit_cgap.scripts.make_sample_fastq_file:main"
resume-uploads = "submit_cgap.scripts.resume_uploads:main"
show-upload-info = "submit_cgap.scripts.show_upload_info:main"
submit-metadata-bundle = "submit_cgap.scripts.submit_metadata_bundle:main"
upload-item-data = "submit_cgap.scripts.upload_item_data:main"

[tool.coverage.report]

# https://coverage.readthedocs.io/en/latest/config.html
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
