[tool.poetry]
name = "submit_cgap"
version = "3.1.0.1b1"  # to become 4.0.0
description = "Support for uploading file submissions to the Clinical Genomics Analysis Platform (CGAP)."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
keywords = ["submit-cgap"]
homepage = "https://github.com/dbmi-bgm/SubmitCGAP"
repository = "https://github.com/dbmi-bgm/SubmitCGAP.git"
packages = [
  { include="submit_cgap", from="." }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 4 - Beta',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',

  'Topic :: Database :: Database Engines/Servers',

  # Pick your license as you wish (should match "license" above)
  'License :: OSI Approved :: MIT License',

  'Natural Language :: English',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',

]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]

python = ">=3.7.0,<3.10"

awscli = "^1.27.79"
# boto3 = "^1.26.79"
dcicutils = "^6.9.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

# PyCharm says boto3-stubs contains useful type hints
# boto3-stubs = "^1.26.79"

# Coverage
codacy-coverage = ">=1.3.11"
coverage = ">=6.5.0"
coveralls = ">=3.3.1"

# Linting generally
flake8 = ">=3.9.2"

# pygments is used by PyCharm
pygments = ">=2.14.0"

# PyTest and its auxiliary support files
pytest = ">=7.2.1"  # ">=6.2.5"
pytest-cov = ">=4.0.0"  # "2.12.1" # >=
pytest-mock = ">=3.10.0"  # 3.6.1"  # >=
pytest-runner = ">=6.0.0"  # "5.3.1"  # >=

# Docs build dependencies
sphinx = ">=3.5.4"  # should be 5.1.1?
sphinx-rtd-theme = ">=1.2.0"

[tool.poetry.scripts]

make-sample-fastq-file = "submit_cgap.scripts.make_sample_fastq_file:main"
resume-uploads = "submit_cgap.scripts.resume_uploads:main"
show-submission-info = "submit_cgap.scripts.show_submission_info:main"
show-upload-info = "submit_cgap.scripts.show_upload_info:main"
submit-metadata-bundle = "submit_cgap.scripts.submit_metadata_bundle:main"
upload-item-data = "submit_cgap.scripts.upload_item_data:main"
submit-genelist = "submit_cgap.scripts.submit_genelist:main"
submit-ontology = "submit_cgap.scripts.submit_ontology:main"

[tool.coverage.report]

# https://coverage.readthedocs.io/en/latest/config.html
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
